--- a/farmstory/index.html
+++ b/farmstory/index.html
@@ -28,7 +28,7 @@
         background: url('./img/head_top_line.png') no-repeat;
     }
     header > .logo {
-        /* margin: 0, auto; 블럭용 명령이라 안 먹힘 */ 
+        /* margin: 0 auto; 블럭용 명령이라 안 먹힘 */ 
         position: absolute;
         top: 20px;
         left: 50%;
