--- a/farmstory/index.html
+++ b/farmstory/index.html
@@ -201,7 +201,7 @@
         height: 100%;
         color:#666;
         font-size: 11px;
-        line-height: 150%;
+        line-height: 16px;
         font-family: "돋움";
         }
         
@@ -217,8 +217,6 @@
     main > .info > article:nth-child(1) > div > img:nth-child(2) {
         float: left;
         margin-right: 15px;}
-    main > .info > article:nth-child(1) > div > ul > li {
-    }
     
     main > .info > article:nth-child(2) {
         width: 23%; 
