--- a/farmstory/1introduction/hello.html
+++ b/farmstory/1introduction/hello.html
@@ -3,89 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>팜스토리::인사말</title>
-    <link rel="stylesheet" href="/farmstory/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
-        /* 서브공통 */
-        .sub {
-            width: 100%;
-            height: auto;
-        }
-        .sub > div {
-            width: 100%;
-        }
-        .sub > div:nth-child(1){
-            position: relative;
-            width: 100%;
-            height: 184px;
-            background: url('/farmstory/img/sub_top_bg.jpg') no-repeat;
-        } 
-        .sub > div:nth-child(1) > img {
-            position: absolute;
-            left:10px; bottom: 10px;
-        }
-
-        .sub > div:nth-child(2) {
-            width: 100%;
-            border: 1px solid pink;
-            box-sizing: border-box;
-            overflow: hidden;
-            /* float를 썼으면 꼭 overflow도 쓸 것 */
-        }
-        .lnb {
-            float: left;
-            width: 18%;
-            min-height: 650px;
-            background: url('/farmstory/img/sub_aside_bg_line.png') no-repeat;
-            background-position: right top; 
-        }
-        .lnb > img {}
-
-        .lnb > ul {
-            width: 175px;
-            height: 233px;
-            border: 1px solid lightgreen;
-            box-sizing: border-box;
-            padding-top: 30px;
-            background: url('/farmstory/img/sub_aside_bg_lnb.png') no-repeat;
-        }
-        .lnb > ul > li {
-            width: 100%;
-            height: 29px;
-            margin-bottom: 6px;
-        }
-        .lnb a {
-            display: block;
-            width: 100%;
-            height: 100%;
-            font-size: 0;
-        }
-
-        /* 서브메뉴 - 팜스토리 소개 */
-        .lnb > ul > li:nth-child(1) > a {background: url('/farmstory/img/sub_cate1_lnb1.png');}
-        .lnb > ul > li:nth-child(1) > a:hover {background: url('/farmstory/img/sub_cate1_lnb1_ov.png');}
-        .lnb > ul > li:nth-child(2) > a {background: url('/farmstory/img/sub_cate1_lnb2.png');}
-        .lnb > ul > li:nth-child(2) > a:hover {background: url('/farmstory/img/sub_cate1_lnb2_ov.png');}
-
-        /* 서브메뉴 - 장보기 */
-        /* 서브메뉴 - 농작물이야기 */
-        /* 서브메뉴 - 이벤트 */
-        /* 서브메뉴 - 커뮤니티 */
-
-        .sub > div:nth-child(2) > article {
-            float: left;
-            width: 82%;
-            min-height: 650px;
-        }
-
+    .sub .content > div {
+        position: relative;
+        width: 100%;
+        height: 164px;
+        background: url('../img/sub_page1_article_bg.jpg');
+        margin-bottom: 20px;
+        box-sizing: border-box;
+    }
+    .sub .content > div > img {
+        position: absolute;
+        margin-top: 30px;
+    }
+    .sub .content > div > .opa {
+        position: absolute;
+        margin-top: 40px;
+        margin-left: 20px;
+        width: 380px;
+        height: 40px;
+        background: black;
+        opacity: 0.4;
+    }
+    .sub .content > p {
+        position: relative;
+        font-size: 11px;
+        color: #666666;
+        line-height: 18px;
+    }
+    .sub .content > p > img {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
+    .sub .content > p > span {color:#91ba15; font-weight: bold;}
     </style>
 </head>
 
 <body>
     <div id="wrapper">  
         <header>
-            <a href="http://wppremium02.hubweb.net" class="logo"><img src="/farmstory/img/logo.png" alt=""></a>
+            <a href="http://wppremium02.hubweb.net" class="logo"><img src="../img/logo.png" alt=""></a>
                 <p>
-                   <a href="/farmstory/">Home</a>
+                   <a href="../">Home</a>
                    <a href="">로그인</a>
                    <a href="">회원가입</a>
                    <a href="">고객센터</a>
@@ -94,7 +55,7 @@
 
             <ul class="gnb">
                 <li><a href="1introduction/hello.html">팜스토리 소개</a></li>
-                <li><a href="#"><img src="/farmstory/img/head_menu_badge.png" alt="30%">장보기</a></li>
+                <li><a href="#"><img src="../img/head_menu_badge.png" alt="30%">장보기</a></li>
                 <li><a href="#">농작물 이야기</a></li>
                 <li><a href="#">이벤트</a></li>
                 <li><a href="#">커뮤니티</a></li>
@@ -103,35 +64,45 @@
 
         <section class="sub sub">
 
-            <div><img src="/farmstory/img/sub_top_tit1.png" alt="introduction"></div>
+            <div><img src="../img/sub_top_tit1.png" alt="introduction"></div>
             <div>
                 <aside class="lnb">
-                    <img src="/farmstory/img/sub_aside_cate1_tit.png" alt="팜스토리소개">
+                    <img src="../img/sub_aside_cate1_tit.png" alt="팜스토리소개">
                     <ul>
-                        <li><a href="#">인삿말</a></li>
-                        <li><a href="#">찾아오시는길</a></li>
+                        <li class="on"><a href="hello.html">인사말</a></li>
+                        <li><a href="direction.html">찾아오시는길</a></li>
                     </ul></aside>
-                <article>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <ul>
-                        <li>항상 저희 팜스토리를 성원해 주시고 관심을 가져주시는 모든 분들께 감사의 인사를 드리며<br>
-                                가정에 건강과 행복이 가득하시길 기원합니다.</li>
-                        <li>팜스토리는 신선하고 안전한 먹거리로 건강한 삶 만들기에 기여합니다.<br>
-                                보다 좋은 농산품을 공급하기 위해 화학비료를 쓰지 않는 건강한 흙에서 유기농업으로 정성을<br>
-                                다해 지은 농사를 통해 믿고 먹을 수 있는 먹거리 제공에 앞장서겠습니다.</li>
-                        <li><b>친환경 농장</b><br>
-                                팜스토리는 경기도 이천에 위치한 10만평 규모의 유기농 제배단지입니다.</li>
-                        <li><b>친환경 캠페인</b><br>
-                                팜스토리는 2차 포장재 사용을 줄임으로써 친환경적인 포장과, 친환경적인 소비문화 정착을 위해 노력합니다.</li>
-                    </ul>
+                <article class="content">
+                    <nav><img src="../img/sub_nav_tit_cate1_tit1.png" alt="인사말">
+                        <p>
+                            HOME > 팜스토리소개 > <span>인사말</span>
+                        </p>
+                    </nav>
+                    <!-- 컨텐츠 내용 시작 -->
+                        <div>
+                            <div class="opa"></div>
+                            <img src="../img/sub_page1_article_txt.png" alt="text">
+                        </div>
+                        <p>
+                        <img src="../img/sub_page1_article_family.png" alt="family">
+                        항상 저희 팜스토리를 성원해 주시고 관심을 가져주시는 모든 분들께 감사의 인사를 드리며<br>
+                        가정에 건강과 행복이 가득하시길 기원합니다.<br><br>
+                        팜스토리는 신선하고 안전한 먹거리로 건강한 삶 만들기에 기여합니다.<br>
+                        보다 좋은 농산품을 공급하기 위해 화학비료를 쓰지 않는 건강한 흙에서 유기농업으로 정성을<br>
+                        다해 지은 농사를 통해 믿고 먹을 수 있는 먹거리 제공에 앞장서겠습니다.<br><br>
+                        <span>친환경 농장</span><br>
+                        팜스토리는 경기도 이천에 위치한 10만평 규모의 유기농 제배단지입니다.<br><br>
+                        <span>친환경 캠페인</span><br>
+                        팜스토리는 2차 포장재 사용을 줄임으로써 친환경적인 포장과, 친환경적인 소비문화 정착을<br>
+                        위해 노력합니다.<br><br>
+                    </p>
+                    <!-- 컨텐츠 내용 끝 -->
                 </article>
             </div>
 
         </section>
     <footer>
-        <img src="/farmstory/img/footer_logo.png" alt="로고">
+        <img src="../img/footer_logo.png" alt="로고">
 
         <p>(주)더조은 / 사업자등록번호 123-45-67890 / 통신판매업신고 제 2013-팜스토리구-123호 / 벤처기업확인 서울지방중소기업청 제 012345678-9-01234호<br/>
             등록번호 팜스토리01234 (2013.04.01) / 발행인 : 홍길동<br/>
