팜스토리 서브완료

--- a/farmstory/3croptalk/story.html
+++ b/farmstory/3croptalk/story.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>팜스토리::찾아오시는길</title>
+    <title>팜스토리::장보기</title>
     <link rel="stylesheet" href="../css/style.css">
 
     <style>
@@ -32,6 +32,7 @@
                    <a href="">고객센터</a>
                 </p>
             <img src="../img/head_txt_img.png" alt="3만원 이상 무료배송, 팜카드 10% 적립">
+
             <ul class="gnb">
                 <li><a href="../1introduction/hello.html">팜스토리 소개</a></li>
                 <li><a href="../2market/market.html"><img src="/farmstory/img/head_menu_badge.png" alt="30%">장보기</a></li>
@@ -41,34 +42,30 @@
             </ul>
         </header>
 
-        <section class="sub cate1">
-            <div><img src="../img/sub_top_tit1.png" alt="introduction"></div>
+        <section class="sub cate3">
+            <div><img src="../img/sub_top_tit3.png" alt="CropTalk"></div>
             <div>
                 <aside class="lnb">
-                    <img src="../img/sub_aside_cate1_tit.png" alt="찾아오시는길">
+                    <img src="../img/sub_aside_cate3_tit.png" alt="농작물이야기">
                     <ul>
-                        <li><a href="hello.html">인사말</a></li>
-                        <li class="on"><a href="direction.html">찾아오시는길</a></li>
+                        <li class="on"><a href="./story.html">농작물이야기</a></li>
+                        <li><a href="./grow.html">텃밭가꾸기</a></li>
+                        <li><a href="./school.html">귀농학교</a></li>
                     </ul></aside>
                 <article class="content">
-                    <nav><img src="../img/sub_nav_tit_cate1_tit2.png" alt="찾아오시는길">
+                    <nav><img src="../img/sub_nav_tit_cate3_tit1.png" alt="농작물이야기">
                         <p>
-                            HOME > 팜스토리소개 > <span>찾아오시는길</span>
+                            HOME > 농작물이야기 > <span>농작물이야기</span>
                         </p>
                     </nav>
 
                     <!-- 컨텐츠 내용 시작 -->
-                   <p>
-                       <img src="../img/sub_page_nav_ico.gif" alt="">
-                        <span>팜스토리</span><br>
-                            주소: 경기도 이천시 잘한다구 신난다동 123<br>
-                            전화: 01-234-5678<br><br>
-                        <img src="../img/sub_page_nav_ico.gif" alt="">
-                        <span>찾아오시는길</span>
-                   </p>
-                   <div>
+                    <p>
+                        컨텐츠
+                    </p>
+                    <div>
 
-                   </div>
+                </div>
                     <!-- 컨텐츠 내용 끝 -->
                 </article>
             </div>
