--- a/farmstory/1introduction/hello.html
+++ b/farmstory/1introduction/hello.html
@@ -44,7 +44,7 @@
 <body>
     <div id="wrapper">  
         <header>
-            <a href="http://wppremium02.hubweb.net" class="logo"><img src="../img/logo.png" alt=""></a>
+            <a href="../index.html" class="logo"><img src="../img/logo.png" alt=""></a>
                 <p>
                    <a href="../">Home</a>
                    <a href="">로그인</a>
@@ -54,15 +54,15 @@
             <img src="../img/head_txt_img.png" alt="3만원 이상 무료배송, 팜카드 10% 적립">
 
             <ul class="gnb">
-                <li><a href="1introduction/hello.html">팜스토리 소개</a></li>
-                <li><a href="#"><img src="../img/head_menu_badge.png" alt="30%">장보기</a></li>
-                <li><a href="#">농작물 이야기</a></li>
-                <li><a href="#">이벤트</a></li>
-                <li><a href="#">커뮤니티</a></li>
+                <li><a href="../1introduction/hello.html">팜스토리 소개</a></li>
+                <li><a href="../2market/market.html"><img src="/farmstory/img/head_menu_badge.png" alt="30%">장보기</a></li>
+                <li><a href="../3croptalk/story.html">농작물 이야기</a></li>
+                <li><a href="../4event/event.html">이벤트</a></li>
+                <li><a href="../5community/notice.html">커뮤니티</a></li>
             </ul>
         </header>
 
-        <section class="sub sub">
+        <section class="sub cate1">
 
             <div><img src="../img/sub_top_tit1.png" alt="introduction"></div>
             <div>
