--- a/farmstory/2market/market.html
+++ b/farmstory/2market/market.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>팜스토리::찾아오시는길</title>
+    <title>팜스토리::장보기</title>
     <link rel="stylesheet" href="../css/style.css">
 
     <style>
@@ -32,6 +32,7 @@
                    <a href="">고객센터</a>
                 </p>
             <img src="../img/head_txt_img.png" alt="3만원 이상 무료배송, 팜카드 10% 적립">
+
             <ul class="gnb">
                 <li><a href="../1introduction/hello.html">팜스토리 소개</a></li>
                 <li><a href="../2market/market.html"><img src="/farmstory/img/head_menu_badge.png" alt="30%">장보기</a></li>
@@ -41,19 +42,18 @@
             </ul>
         </header>
 
-        <section class="sub cate1">
-            <div><img src="../img/sub_top_tit1.png" alt="introduction"></div>
+        <section class="sub cate2">
+            <div><img src="../img/sub_top_tit2.png" alt="Market"></div>
             <div>
                 <aside class="lnb">
-                    <img src="../img/sub_aside_cate1_tit.png" alt="찾아오시는길">
+                    <img src="../img/sub_aside_cate2_tit.png" alt="장보기">
                     <ul>
-                        <li><a href="hello.html">인사말</a></li>
-                        <li class="on"><a href="direction.html">찾아오시는길</a></li>
+                        <li class="on"><a href="./market.html">장보기</a></li>
                     </ul></aside>
                 <article class="content">
-                    <nav><img src="../img/sub_nav_tit_cate1_tit2.png" alt="찾아오시는길">
+                    <nav><img src="../img/sub_nav_tit_cate2_tit1.png" alt="장보기">
                         <p>
-                            HOME > 팜스토리소개 > <span>찾아오시는길</span>
+                            HOME > 장보기 > <span>장보기</span>
                         </p>
                     </nav>
 
