--- a/farmstory/4event/event.html
+++ b/farmstory/4event/event.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>팜스토리::찾아오시는길</title>
+    <title>팜스토리::장보기</title>
     <link rel="stylesheet" href="../css/style.css">
 
     <style>
@@ -32,6 +32,7 @@
                    <a href="">고객센터</a>
                 </p>
             <img src="../img/head_txt_img.png" alt="3만원 이상 무료배송, 팜카드 10% 적립">
+
             <ul class="gnb">
                 <li><a href="../1introduction/hello.html">팜스토리 소개</a></li>
                 <li><a href="../2market/market.html"><img src="/farmstory/img/head_menu_badge.png" alt="30%">장보기</a></li>
@@ -41,30 +42,24 @@
             </ul>
         </header>
 
-        <section class="sub cate1">
-            <div><img src="../img/sub_top_tit1.png" alt="introduction"></div>
+        <section class="sub cate4">
+            <div><img src="../img/sub_top_tit4.png" alt="Event"></div>
             <div>
                 <aside class="lnb">
-                    <img src="../img/sub_aside_cate1_tit.png" alt="찾아오시는길">
+                    <img src="../img/sub_aside_cate4_tit.png" alt="이벤트">
                     <ul>
-                        <li><a href="hello.html">인사말</a></li>
-                        <li class="on"><a href="direction.html">찾아오시는길</a></li>
+                        <li class="on"><a href="./event.html">이벤트</a></li>
                     </ul></aside>
                 <article class="content">
-                    <nav><img src="../img/sub_nav_tit_cate1_tit2.png" alt="찾아오시는길">
+                    <nav><img src="../img/sub_nav_tit_cate4_tit1.png" alt="이벤트">
                         <p>
-                            HOME > 팜스토리소개 > <span>찾아오시는길</span>
+                            HOME > 이벤트 > <span>이벤트</span>
                         </p>
                     </nav>
 
                     <!-- 컨텐츠 내용 시작 -->
                    <p>
-                       <img src="../img/sub_page_nav_ico.gif" alt="">
-                        <span>팜스토리</span><br>
-                            주소: 경기도 이천시 잘한다구 신난다동 123<br>
-                            전화: 01-234-5678<br><br>
-                        <img src="../img/sub_page_nav_ico.gif" alt="">
-                        <span>찾아오시는길</span>
+                       ㅇㅅㅇ
                    </p>
                    <div>
 
