--- a/farmstory/index.html
+++ b/farmstory/index.html
@@ -19,11 +19,11 @@
             <img src="img/head_txt_img.png" alt="3만원 이상 무료배송, 팜카드 10% 적립">
 
             <ul class="gnb">
-                <li><a href="1introduction/hello.html">팜스토리 소개</a></li>
-                <li><a href="#"><img src="img/head_menu_badge.png" alt="30%">장보기</a></li>
-                <li><a href="#">농작물 이야기</a></li>
-                <li><a href="#">이벤트</a></li>
-                <li><a href="#">커뮤니티</a></li>
+                <li><a href="./1introduction/hello.html">팜스토리 소개</a></li>
+                <li><a href="./2market/market.html"><img src="img/head_menu_badge.png" alt="30%">장보기</a></li>
+                <li><a href="./3croptalk/story.html">농작물 이야기</a></li>
+                <li><a href="./4event/event.html">이벤트</a></li>
+                <li><a href="./5community/notice.html">커뮤니티</a></li>
             </ul>
         </header>
 
