--- a/farmstory/1introduction/direction.html
+++ b/farmstory/1introduction/direction.html
@@ -56,19 +56,26 @@
                             HOME > 팜스토리소개 > <span>찾아오시는길</span>
                         </p>
                     </nav>
-
                     <!-- 컨텐츠 내용 시작 -->
-                   <p>
-                       <img src="../img/sub_page_nav_ico.gif" alt="">
-                        <span>팜스토리</span><br>
-                            주소: 경기도 이천시 잘한다구 신난다동 123<br>
-                            전화: 01-234-5678<br><br>
-                        <img src="../img/sub_page_nav_ico.gif" alt="">
-                        <span>찾아오시는길</span>
-                   </p>
-                   <div>
+                    <!-- * 카카오맵 - 지도퍼가기 -->
+                    <!-- 1. 지도 노드 -->
+                    <div id="daumRoughmapContainer1571897895943" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 
-                   </div>
+                    <!--
+                        2. 설치 스크립트
+                        * 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
+                    -->
+                    <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+
+                    <!-- 3. 실행 스크립트 -->
+                    <script charset="UTF-8">
+                        new daum.roughmap.Lander({
+                            "timestamp" : "1571897895943",
+                            "key" : "vjrq",
+                            "mapWidth" : "740",
+                            "mapHeight" : "400"
+                        }).render();
+                    </script>
                     <!-- 컨텐츠 내용 끝 -->
                 </article>
             </div>
