--- a/farmstory/5community/qna.html
+++ b/farmstory/5community/qna.html
@@ -48,7 +48,7 @@
                 <aside class="lnb">
                     <img src="../img/sub_aside_cate5_tit.png" alt="커뮤니티">
                     <ul>
-                        <li><a href="./market.html">공지사항</a></li>
+                        <li><a href="./notice.html">공지사항</a></li>
                         <li><a href="./menu.html">오늘의식단</a></li>
                         <li><a href="./chef.html">나도요리사</a></li>
                         <li class="on"><a href="./qna.html">1:1고객문의</a></li>
@@ -66,14 +66,13 @@
                        ㅇㅅㅇ
                    </p>
                    <div>
-
                    </div>
                     <!-- 컨텐츠 내용 끝 -->
                 </article>
             </div>
-
         </section>
-    <footer>
+
+        <footer>
         <img src="../img/footer_logo.png" alt="로고">
 
         <p>(주)더조은 / 사업자등록번호 123-45-67890 / 통신판매업신고 제 2013-팜스토리구-123호 / 벤처기업확인 서울지방중소기업청 제 012345678-9-01234호<br/>
