--- a/farmstory/index.html
+++ b/farmstory/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>FarmStory</title>
-<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+<style>
+#banner {
+   position: fixed;
+   left: 50%; top: 152px;
+   margin-left: 500px;
+   width: 60px; height: 110px;
+   background: url('./img/float_banner_bg.png');
+}
+#banner > a:nth-of-type(1) {
+    widows: 100%;
+    height: 89px;
+    background: url('./img/float_banner_tit_bg.png');
+}
+
+</style>
 </head>
 
 <body>
+    <div id="banner">
+        <a href="./4event/event.html"><img src="./img/float_banner_tit.png" alt=""></a>
+        <a href="./2market/market.html"><img src="./img/float_banner_txt.png" alt=""></a>
+    </div>
+
     <div id="wrapper">
         <header>
             <a href="http://wppremium02.hubweb.net" class="logo"><img src="img/logo.png" alt=""></a>
@@ -185,7 +205,6 @@
                 대표 : 홍길동 / 이메일 : email@mail.mail / 전화 : 01) 234-5678 / 부산시 부산진구 부전동<br/>
                 <strong>(C)홍길동 All rights reserved.</strong>
             </p>
-
         </footer>
     </div>
 </body>
